--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.43.1",
+    "react-vertical-timeline-component": "^3.5.3",
     "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
