--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#@41016",
+  "theme_color": "#041016",
   "background_color": "#041016"
 }
