--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^19.1.0",
-    "react-github-calendar": "^3.2.2",
+    "react-dom": "^18.3.1",
+    "react-github-calendar": "^3.4.0",
     "react-icons": "^4.12.0",
-    "react-parallax-tilt": "^1.7.42",
+    "react-parallax-tilt": "^1.7.301",
     "react-pdf": "^10.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-tsparticles": "^1.43.1",
-    "react-vertical-timeline-component": "^3.5.3",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/engine": "^3.0.0",
     "tsparticles": "^3.8.1",
-    "typewriter-effect": "^2.18.2",
+    "react-vertical-timeline-component": "^3.6.0",
+    
+    "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
