--- a/package.json
+++ b/package.json
@@ -54,5 +54,12 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
+  },
+  "overrides": {
+    "svgo": "2.8.0",
+    "rimraf": "4.4.1",
+    "glob": "9.3.5",
+    "rollup-plugin-terser": "7.0.2",
+    "stable": "0.1.8"
   }
 }
