--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "bits-of-me",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.0.0",
+    "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -20,11 +22,8 @@
     "react-pdf": "^10.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/engine": "^3.0.0",
-    "tsparticles": "^3.8.1",
     "react-vertical-timeline-component": "^3.6.0",
-    
+    "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
